--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <body>
     <h1>Hello World</h1>
-    <input type="number" name="quantity" min="0" max="255" step="1" value="0">
+    <input style="width:20" type="number" name="quantity" min="0" max="255" step="1" value="0">
     <p>I'm hosted with GitHub Pages.</p>
    </body>
 </html>
