--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <body>
+  <body style="background_color:000000">
     <h1>Hello World</h1>
     <input style="width:20" type="number" name="quantity" min="0" max="255" step="1" value="0">
     <p>I'm hosted with GitHub Pages.</p>
