--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
-  <body style="background-color:#101010; color:#808080;">
+  <body style="background-color:#202020; color:#909090;">
     <h1>Hello World</h1>
     <input style="width:20" type="number" name="quantity" min="0" max="255" step="1" value="0">
     <p>I'm hosted with GitHub Pages.</p>
+    <div class="panel panel-default">
+      <div class="panel-body">A Basic Panel</div>
+    </div>
+    
+    
    </body>
 </html>
