--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <div style="height: 100%; width: 50%; position: fixed; z-index: 1; top: 0; overflow-x: hidden;  padding-top: 20px;">
       <p> Panel 1 </p>
     </div>
+    <div style="height: 100%; width: 50%; position: fixed; z-index: 1; top: 0; overflow-x: hidden;  padding-top: 20px;">
+      <p> Panel 2 </p>
+    </div>
     
     
    </body>
