--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <h1>Hello World</h1>
     <input style="width:20" type="number" name="quantity" min="0" max="255" step="1" value="0">
     <p>I'm hosted with GitHub Pages.</p>
-    <div style="height: 100%; width: 50%; position: fixed; z-index: 1; top: 0; overflow-x: hidden;  padding-top: 20px;">
+    <div style="height: 100%; width: 50%; position: absolute; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px;">
       <p> Panel 1 </p>
     </div>
-    <div style="height: 100%; width: 50%; position: fixed; z-index: 1; top: 0; overflow-x: hidden;  padding-top: 20px;">
+    <div style="height: 100%; width: 50%; position: absolute; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px; right: 0;">
       <p> Panel 2 </p>
     </div>
     
