--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <div style="height: 100%; width: 50%; position: absolute; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px;">
       <p> Panel 1 </p>
     </div>
-    <div style="height: 100%; width: 50%; position: absolute; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; right: 50%;">
-      <div name="viewport" style="background-color:#000000;">
+    <div style="height: 100%; width: 50%; position: absolute; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; right: 0;">
+      <div name="viewport" style="background-color:#000000; width:100% height:100%">
       </div>
     </div>
     
