--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <body style="background-color:#202020; color:#909090;">
-    <h1>Hello World</h1>
-    <input style="width:20" type="number" name="quantity" min="0" max="255" step="1" value="0">
-    <p>I'm hosted with GitHub Pages.</p>
     <div style="height: 100%; width: 50%; position: absolute; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px;">
+      <h1>Hello World</h1>
       <p> Panel 1 </p>
+      <input style="width:20" type="number" name="hullcount" min="0" max="255" step="1" value="0">
+      <input style="width:20" type="number" name="seed" min="0" max="255" step="1" value="0">
+      
     </div>
     <div style="height: 100%; width: 50%; position: absolute; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; right: 0;">
       <div name="viewport" style="background-color:#000000; width:100% height:100%">
