--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
   <body style="background-color:#202020; color:#909090;">
     <div style="height: 100%; width: 50%; position: absolute; z-index: 1; top: 0; overflow-x: hidden;">
       <h1>Hello World</h1>
-      <p> Panel 1 </p>
-      <input style="width:20" type="number" name="hullcount" min="0" max="255" step="1" value="0">
-      <input style="width:20" type="number" name="seed" min="0" max="255" step="1" value="0">
-      
+      <div>
+        <p> Hull Count </p>
+        <input style="width:20" type="number" name="hullcount" min="0" max="255" step="1" value="0">
+      </div>
+      <div>
+        <p> Seed </p>
+        <input style="width:20" type="number" name="seed" min="0" max="255" step="1" value="0">
+      </div>
     </div>
     <div style="height: 100%; width: 50%; position: absolute; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; right: 0;">
       <div name="viewport" style="background-color:#000000; width:100% height:100%">
