--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body style="background-color:#202020; color:#909090;">
-    <div style="height: 100%; width: 50%; position: absolute; z-index: 1; top: 0; overflow-x: hidden;">
+    <div style="height: 100%; width: 50%; position: absolute; z-index: 1; top: 0; overflow-x: hidden; left: 0;">
       <h1>Hello World</h1>
       <div>
         <p> Hull Count </p>
