--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
   <body style="background-color:#202020; color:#909090;">
     <div style="height: 100%; width: 50%; position: absolute; z-index: 1; top: 0; overflow-x: hidden; left: 0;">
       <h1>Hello World</h1>
-      <div>
+      <div style="float:left;">
         <p> Hull Count </p>
         <input style="width:20" type="number" name="hullcount" min="0" max="255" step="1" value="0">
       </div>
-      <div>
+      <div style="float:left;">
         <p> Seed </p>
         <input style="width:20" type="number" name="seed" min="0" max="255" step="1" value="0">
+      </div>
+      <div style="clear:left">
+        <p> next </p>
       </div>
     </div>
     <div style="height: 100%; width: 50%; position: absolute; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; right: 0;">
