--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <body style="background-color:#202020; color:#909090;">
-    <div style="height: 100%; width: 50%; position: absolute; z-index: 1; top: 0; overflow-x: hidden; left: 0;">
+    <div style="height: 100%; width: 50%; position: absolute; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
       <h1>Hello World</h1>
-      <div style="float:left;">
+      <div style="float:left; text-align: center;">
         <p> Hull Count </p>
         <input style="width:20" type="number" name="hullcount" min="0" max="255" step="1" value="0">
       </div>
-      <div style="float:left;">
+      <div style="float:left; text-align: center;">
         <p> Seed </p>
         <input style="width:20" type="number" name="seed" min="0" max="255" step="1" value="0">
       </div>
@@ -15,8 +15,8 @@
         <p> next </p>
       </div>
     </div>
-    <div style="height: 100%; width: 50%; position: absolute; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; right: 0;">
-      <div name="viewport" style="background-color:#000000; width:100% height:100%">
+    <div style="height: 100%; width: 50%; position: absolute; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; right: 0; border:1px;">
+      <div name="viewport" style="background-color:#000000; width:100% height:100% border:1px;">
         <p> hello? </p>
       </div>
     </div>
