--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
       <h1>Hello World</h1>
       <div style="float:left; text-align: center;">
         <p> Hull Count </p>
-        <input style="width:20" type="number" name="hullcount" min="0" max="255" step="1" value="0">
+        <input style="width:20" type="number" id="hullcount" min="0" max="255" step="1" value="0">
       </div>
       <div style="float:left; text-align: center;">
         <p> Seed </p>
-        <input style="width:20" type="number" name="seed" min="0" max="255" step="1" value="0">
+        <input style="width:20" type="number" id="seed" min="0" max="255" step="1" value="0">
+      </div>
+      <div style="float:left; text-align: center;">
+        <input type="checkbox" id="scales" name="scales">
+        <label for="scales">Scales</label>
       </div>
       <div style="clear:left">
         <p> next </p>
