--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <div style="height: 100%; width: 50%; position: absolute; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
       <h1>Hello World</h1>
       <div style="float:left; text-align: center;">
-        <p> Hull Count </p>
+        Hull Count
         <input style="width:20; background-color:#202020; color:#909090;" type="number" id="hullcount" min="0" max="255" step="1" value="0">
       </div>
       <div style="float:left; text-align: center;">
-        <p> Seed </p>
+        Seed
         <input style="width:20; background-color:#202020; color:#909090;" type="number" id="seed" min="0" max="255" step="1" value="0">
       </div>
       <div style="float:left; text-align: center;">
