--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
       <h1>Hello World</h1>
       <div style="float:left; text-align: center;">
         Hull Count
-        <input style="width:20; background-color:#202020; color:#909090;" type="number" id="hullcount" min="0" max="255" step="1" value="0">
+        <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="hullcount" min="0" max="255" step="1" value="0">
       </div>
       <div style="float:left; text-align: center;">
         Seed
-        <input style="width:20; background-color:#202020; color:#909090;" type="number" id="seed" min="0" max="255" step="1" value="0">
+        <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="seed" min="0" max="255" step="1" value="0">
       </div>
       <div style="float:left; text-align: center;">
         <input type="checkbox" id="scales" name="scales">
