--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <div style="height: 100%; width: 50%; position: absolute; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
       <h1>Hello World</h1>
       <div style="float:left; text-align: center;">
-        Hull Count
+        Hull Count<br>
         <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="hullcount" min="0" max="255" step="1" value="0">
       </div>
       <div style="float:left; text-align: center;">
-        Seed
+        Seed<br>
         <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="seed" min="0" max="255" step="1" value="0">
       </div>
       <div style="float:left; text-align: center;">
-        <input type="checkbox" id="scales" name="scales">
-        <label for="scales">Scales</label>
+        <input type="checkbox" id="updatemodel">
+        <label for="scales">Update View</label>
+        <input type="checkbox" id="slowmode">
+        <label for="scales">Slow Mode</label>
       </div>
       <div style="clear:left">
         <p> next </p>
