--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="seed" min="0" max="255" step="1" value="0">
       </div>
       <div style="float:left; text-align: center;">
-        <input type="checkbox" id="updatemodel">
+        <input type="checkbox" id="updatemodel" style="background-color:#202020; border-color:#101010; color:#909090;">
         <label for="scales">Update View</label>
-        <input type="checkbox" id="slowmode">
+        <input type="checkbox" id="slowmode" style="background-color:#202020; border-color:#101010; color:#909090;">
         <label for="scales">Slow Mode</label>
       </div>
       <div style="clear:left">
