--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       </div>
       <div style="float:left; text-align: center;">
         <input type="checkbox" id="updatemodel" style="background-color:#202020; border-color:#101010; color:#909090;">
-        <label for="scales">Update View</label>
+        <label for="scales">Update View</label> <br>
         <input type="checkbox" id="slowmode" style="background-color:#202020; border-color:#101010; color:#909090;">
         <label for="scales">Slow Mode</label>
       </div>
