--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         Seed<br>
         <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="seed" min="0" max="255" step="1" value="0">
       </div>
-      <div style="float:left; text-align: center;">
+      <div style="float:left;">
         <input type="checkbox" id="updatemodel" style="background-color:#202020; border-color:#101010; color:#909090;">
         <label for="scales">Update View</label> <br>
         <input type="checkbox" id="slowmode" style="background-color:#202020; border-color:#101010; color:#909090;">
@@ -21,8 +21,8 @@
         <p> next </p>
       </div>
     </div>
-    <div style="height: 100%; width: 50%; position: absolute; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; right: 0; border:1px;">
-      <div name="viewport" style="background-color:#000000; width:100% height:100% border:1px;">
+    <div style="height: 100%; width: 50%; position: absolute; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; right: 0; border:1px; border-color:#FFFFFF;">
+      <div name="viewport" style="background-color:#000000; width:100% height:100% border:1px; border-color:#FFFFFF;">
         <p> hello? </p>
       </div>
     </div>
