--- a/index.html
+++ b/index.html
@@ -2,23 +2,28 @@
 <html>
   <body style="background-color:#202020; color:#909090;">
     <div style="height: 100%; width: 50%; position: absolute; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
-      <h1>Hello World</h1>
-      <div style="float:left; text-align: center;">
-        Hull Count<br>
-        <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="hullcount" min="0" max="255" step="1" value="0">
+      <div style="height: 100%; width: 50%; position: absolute; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
+       <h1>Hello World</h1>
+       <div style="float:left; text-align: center;">
+         Hull Count<br>
+         <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="hullcount" min="0" max="255" step="1" value="0">
+       </div>
+       <div style="float:left; text-align: center;">
+         Seed<br>
+         <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="seed" min="0" max="255" step="1" value="0">
+       </div>
+       <div style="float:left;">
+         <input type="checkbox" id="updatemodel" style="background-color:#202020; border-color:#101010; color:#909090;">
+         <label for="scales">Update View</label> <br>
+         <input type="checkbox" id="slowmode" style="background-color:#202020; border-color:#101010; color:#909090;">
+         <label for="scales">Slow Mode</label>
+       </div>
+       <div style="clear:left">
+         <p> next </p>
+       </div>
       </div>
-      <div style="float:left; text-align: center;">
-        Seed<br>
-        <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="seed" min="0" max="255" step="1" value="0">
-      </div>
-      <div style="float:left;">
-        <input type="checkbox" id="updatemodel" style="background-color:#202020; border-color:#101010; color:#909090;">
-        <label for="scales">Update View</label> <br>
-        <input type="checkbox" id="slowmode" style="background-color:#202020; border-color:#101010; color:#909090;">
-        <label for="scales">Slow Mode</label>
-      </div>
-      <div style="clear:left">
-        <p> next </p>
+      <div style="height: 100%; width: 50%; position: absolute; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; right: 0; border:1px; border-color:#FFFFFF;">
+      beep
       </div>
     </div>
     <div style="height: 100%; width: 50%; position: absolute; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; right: 0; border:1px; border-color:#FFFFFF;">
