--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <body style="background-color:#202020; color:#909090;">
-    <div style="height: 100%; width: 50%; position: relative; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
-      <div style="height: 100%; width: 50%; position: relative; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
+    <div style="height: 100%; width: 50%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
+      <div style="height: 100%; width: 50%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
        <h1>Hello World</h1>
        <div style="float:left; text-align: center;">
          Hull Count<br>
@@ -18,16 +18,16 @@
          <input type="checkbox" id="slowmode" style="background-color:#202020; border-color:#101010; color:#909090;">
          <label for="scales">Slow Mode</label>
        </div>
-       <div style="clear:left">
+       <div id="hullspane" style="clear:left">
          <p> next </p>
        </div>
       </div>
-      <div style="height: 100%; width: 50%; position: relative; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; right: 0; border:1px; border-color:#FFFFFF;">
+      <div id="settingspane" style="height: 100%; width: 50%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; right: 0; border:1px; border-color:#FFFFFF;">
       beep
       </div>
     </div>
-    <div style="height: 100%; width: 50%; position: relative; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; right: 0; border:1px; border-color:#FFFFFF;">
-      <div name="viewport" style="background-color:#000000; width:100% height:100% border:1px; border-color:#FFFFFF;">
+    <div style="height: 100%; width: 50%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; right: 0; border:1px; border-color:#FFFFFF;">
+      <div id="viewport" style="background-color:#000000; width:100% height:100% border:1px; border-color:#FFFFFF;">
         <p> hello? </p>
       </div>
     </div>
