--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
          <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="seed" min="0" max="255" step="1" value="0">
        </div>
        <div style="float:left;">
-         <input type="checkbox" id="updatemodel" style="background-color:#202020; border-color:#101010; color:#909090;">
-         <label for="scales">Update View</label> <br>
-         <input type="checkbox" id="slowmode" style="background-color:#202020; border-color:#101010; color:#909090;">
-         <label for="scales">Slow Mode</label>
+         <input type="checkbox" id="updatemodel">
+         <label for="updatemodel">Update View</label> <br>
+         <input type="checkbox" id="slowmode">
+         <label for="slowmode">Slow Mode</label>
        </div>
        <div id="hullspane" style="clear:left">
          <p> next </p>
