--- a/index.html
+++ b/index.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html>
   <body style="background-color:#202020; color:#909090;">
-    <div style="height: 100%; width: 50%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
-      <div style="height: 100%; width: 50%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
-       <h1>Hello World</h1>
-       <div style="float:left; text-align: center;">
-         Hull Count<br>
-         <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="hullcount" min="0" max="255" step="1" value="0">
-       </div>
-       <div style="float:left; text-align: center;">
-         Seed<br>
-         <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="seed" min="0" max="255" step="1" value="0">
-       </div>
-       <div style="float:left;">
-         <input type="checkbox" id="updatemodel">
-         <label for="updatemodel">Update View</label> <br>
-         <input type="checkbox" id="slowmode">
-         <label for="slowmode">Slow Mode</label>
-       </div>
-       <div id="hullspane" style="clear:left">
-         <p> next </p>
-       </div>
+    <div style="height: 100%; width: 25%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
+      <h1>Hello World</h1>
+      <div style="float:left; text-align: center;">
+        Hull Count<br>
+        <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="hullcount" min="0" max="255" step="1" value="0">
       </div>
-      <div id="settingspane" style="height: 100%; width: 50%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; right: 0; border:1px; border-color:#FFFFFF;">
+      <div style="float:left; text-align: center;">
+        Seed<br>
+        <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="seed" min="0" max="255" step="1" value="0">
+      </div>
+      <div style="float:left;">
+        <input type="checkbox" id="updatemodel">
+        <label for="updatemodel">Update View</label> <br>
+        <input type="checkbox" id="slowmode">
+        <label for="slowmode">Slow Mode</label>
+      </div>
+      <div id="hullspane" style="clear:left">
+        <p> next </p>
+      </div>
+    </div>
+    <div id="settingspane" style="height: 100%; width: 25%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; right: 50%; border:1px; border-color:#FFFFFF;">
       beep
-      </div>
     </div>
     <div style="height: 100%; width: 50%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; right: 0; border:1px; border-color:#FFFFFF;">
       <div id="viewport" style="background-color:#000000; width:100% height:100% border:1px; border-color:#FFFFFF;">
