--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <body style="background-color:#202020; color:#909090;">
     <div style="height: 100%; width: 25%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
       <h1>Hello World</h1>
+      <label> Page v.005 </label> <label id="versionlabel"> Script not loaded </label>
       <div style="float:left; text-align: center;">
         Hull Count<br>
-        <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="hullcount" min="0" max="255" step="1" value="0">
+        <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="hullcount" min="1" max="7" step="1" value="0">
       </div>
       <div style="float:left; text-align: center;">
         Seed<br>
