--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <body style="background-color:#202020; color:#909090;">
     <div style="height: 100%; width: 25%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
-      <h1>Hello World</h1>
-      Page v.006 <div id="versionlabel"> Script not loaded </div>
+      <h1>Ship Generator</h1>
+      Page v.007 <div id="versionlabel"> Script not loaded </div>
       <div style="float:left; text-align: center;">
         Hull Count<br>
         <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="hullcount" min="1" max="7" step="1" value="0">
