--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <body style="background-color:#202020; color:#909090;">
     <div style="height: 100%; width: 25%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
       <h1>Ship Generator</h1>
-      Page v.007 <div id="versionlabel"> Script not loaded </div>
+      Page v.008 <div id="versionlabel"> Script not loaded </div>
       <div style="float:left; text-align: center;">
         Hull Count<br>
         <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="hullcount" min="1" max="7" step="1" value="0">
@@ -32,6 +32,6 @@
     </div>
     
     
-    <script type="text/javascript" src="main. js"></script>
+    <script src="main.js"></script>
    </body>
 </html>
