--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <body style="background-color:#202020; color:#909090;">
     <div style="height: 100%; width: 25%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
       <h1>Ship Generator</h1>
-      Page v.009 <div id="versionlabel"> Script not loaded </div>
+      Page v.010 <div id="versionlabel"> Script not loaded </div>/n
       <div style="float:left; text-align: center;">
         Hull Count<br>
         <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="hullcount" min="1" max="7" step="1" value="0">
@@ -26,7 +26,7 @@
       beep
     </div>
     <div style="height: 100%; width: 50%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; right: 0;">
-      <div id="viewport" style="background-color:#000000; position:static; width:100%; height:100%;">
+      <div id="viewport" style="background-color:#000000; position:static; width:100%; height:100%; top:0;">
         <p> hello? </p>
       </div>
     </div>
