--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <div id="settingspane" style="height: 100%; width: 25%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; right: 50%; border:1px; border-color:#FFFFFF;">
       beep
     </div>
-    <div style="height: 100%; width: 50%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; right: 0;">
-      <div id="viewport" style="background-color:#000000; position:static; width:100%; height:100%; top:0; right:0;">
+    <div style="height: 100%; width: 50%; position: fixed; z-index: 1; top: 0; right: 0;">
+      <div id="viewport" style="background-color:#000000; position:fixed; width:100%; height:100%; top:0; right:0; margin-top:10; margin-bottom:10; margin-left:10; margin-right:10;">
         <p> hello? </p>
       </div>
     </div>
