--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <body style="background-color:#202020; color:#909090;">
     <div style="height: 100%; width: 25%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
       <h1>Ship Generator</h1>
-      Page v.013 <div id="versionlabel"> Script not loaded <br></div>
-      <div style="float:left; text-align: center;">
-        Seed<br>
-        <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="seed" min="0" max="255" step="1" value="0">
+      <div style="float:left;">
+        Page v.015 <div id="versionlabel"> Script not loaded <br></div>
+        <div style="float:left; text-align: center;">
+          Seed<br>
+          <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="seed" min="0" max="255" step="1" value="0">
+        </div>
       </div>
       <div style="float:left;">
         <input type="checkbox" id="updatemodel">
