--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       beep
     </div>
     <div style="height: 100%; width: 50%; position: fixed; z-index: 1; top: 0; right: 0;">
-      <div id="viewport" style="background-color:#000000; position:fixed; width:100%; height:100%; top:0; right:0; margin-top:10; margin-bottom:10; margin-left:10; margin-right:10;">
+      <div id="viewport" style="background-color:#000000; position:relative; width:100%px; height:100%; top:0; right:0; margin-top:10; margin-bottom:10; margin-left:10; margin-right:10;">
         <p> hello? </p>
       </div>
     </div>
