--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <div style="height: 100%; width: 25%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
       <h1>Ship Generator</h1>
       <div style="float:left;">
-        Page v.016 <div id="versionlabel"> Script not loaded <br></div>
+        Page v.017 <div id="versionlabel"> Script not loaded <br></div>
         <div style="float:left; text-align: center;">
           Seed<br>
           <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="seed" min="0" max="255" step="1" value="0">
@@ -17,14 +17,15 @@
         <label for="slowmode">Slow Mode</label>
       </div>
       <div id="hullspane" style="clear:left">
-        <p> next </p>
+        <p>Hulls Pane.</p>
       </div>
     </div>
     <div id="settingspane" style="height: 100%; width: 25%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; right: 50%; border:1px; border-color:#FFFFFF;">
-      beep
+      Settings Pane.
     </div>
     <div style="height:100%; width:50%; position:fixed; z-index:1; top:0; right:0; padding:10;">
       <div id="viewport" style="background-color:#000000; position:relative; width:100%px; height:100%; top:0; right:0;">
+        Output Pane.
       </div>
     </div>
     
