--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <body style="background-color:#202020; color:#909090;">
     <div style="height: 100%; width: 25%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
       <h1>Ship Generator</h1>
-      <div style="float:left; position:relative; height:24;">
-        Page v.020 <div id="versionlabel"> Script not loaded <br></div>
-        <div style="float:left; position:relative; height:24; text-align: center;">
+      <div style="float:left; position:absolute; height:24;">
+        Page v.021 <div id="versionlabel"> Script not loaded <br></div>
+        <div style="float:left; position:absolute; height:24; text-align: center;">
           Seed<br>
           <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="seed" min="0" max="255" step="1" value="0">
         </div>
       </div>
-      <div style="float:left; position:relative; height:24;">
+      <div style="float:left; position:absolute; height:24;">
         <input type="checkbox" id="updatemodel">
         <label for="updatemodel">Update View</label> <br>
         <input type="checkbox" id="slowmode">
@@ -24,7 +24,7 @@
       Settings Pane.
     </div>
     <div style="height:100%; width:50%; position:fixed; z-index:1; top:0; right:0; padding-bottom:10; padding-top:10; padding-left:10; padding-right:10;">
-      <div id="viewport" style="background-color:#000000; position:relative; width:100%px; height:100%; top:0; right:0;">
+      <div id="viewport" style="background-color:#000000; position:relative; top:10; right:10; left:10; bottom:10;">
         Output Pane.
       </div>
     </div>
