--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <div style="height: 100%; width: 25%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
       <h1>Ship Generator----------</h1>
       <div style="float:left; position:static; height:24;">
-        Page v.024 <div id="versionlabel"> Script not loaded </div>
+        Page v.025 <div id="versionlabel"> Script not loaded </div>
         <div style="float:left; position:static; height:24; text-align: center;">
           Seed<br>
           <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="seed" min="0" max="255" step="1" value="0">
@@ -24,7 +24,7 @@
       Settings Pane.
     </div>
     <div style="height:100%; width:50%; position:fixed; z-index:1; top:0; right:0; padding-bottom:10; padding-top:10; padding-left:10; padding-right:10;">
-      <div id="viewport" style="background-color:#000000; position:absolute; height:100%; width:100%">
+      <div id="viewport" style="background-color:#000000; position:absolute; height:100vh; width:100vh">
         Output Pane.
       </div>
     </div>
