--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <body style="background-color:#202020; color:#909090;">
     <div style="height: 100%; width: 25%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
       <h1>Ship Generator----------</h1>
-      <div style="float:left; position:static; height:24; border:3px solid #FFFFFF;">
+      <div style="float:left; position:static; height:24;">
         Page v.027 <div id="versionlabel"> Script not loaded </div>
-        <div style="float:left; position:static; height:24; border:3px solid #FFFFFF; text-align: center;">
-          Seed<br>
-          <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="seed" min="0" max="255" step="1" value="0">
-        </div>
       </div>
-      <div style="float:left; position:static; height:24; border:3px solid #FFFFFF;">
+      <div style="float:left; position:static; height:24; text-align: center;">
+        Seed<br>
+        <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="seed" min="0" max="255" step="1" value="0">
+      </div>
+      <div style="float:left; position:static; height:24;">
         <input type="checkbox" id="updatemodel">
         <label for="updatemodel">Update View</label> <br>
         <input type="checkbox" id="slowmode">
