--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <body style="background-color:#202020; color:#909090;">
     <div style="height: 100%; width: 25%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
       <h1>Ship Generator----------</h1>
-      <div style="float:left; position:static; height:24;">
+      <div style="float:left; position:static; height:24; padding:3px;">
         Page v.027 <div id="versionlabel"> Script not loaded </div>
       </div>
-      <div style="float:left; position:static; height:24; text-align: center;">
+      <div style="float:left; position:static; height:24; padding:3px; text-align: center;">
         Seed<br>
         <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="seed" min="0" max="255" step="1" value="0">
       </div>
-      <div style="float:left; position:static; height:24;">
+      <div style="float:left; position:static; height:24; padding:3px;">
         <input type="checkbox" id="updatemodel">
         <label for="updatemodel">Update View</label> <br>
         <input type="checkbox" id="slowmode">
@@ -23,7 +23,7 @@
     <div id="settingspane" style="height: 100%; width: 25%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; right: 50%; border:1px; border-color:#FFFFFF;">
       Settings Pane.
     </div>
-    <div style="height:100%; width:50%; position:fixed; z-index:1; top:0; right:0; padding-bottom:10; padding-left:10; padding-right:10; padding-top:10;">
+    <div style="height:100%; width:50%; position:fixed; z-index:1; top:0; right:0; padding:10px;">
       <div id="viewport" style="background-color:#000000; position:absolute; height:100vh; width:100vh">
         Output Pane.
       </div>
