--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <div style="height: 100%; width: 25%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
       <h1>Ship Generator----------</h1>
       <div style="float:left; position:static; height:24; padding:3px;">
-        Page v.028 <div id="versionlabel"> Script not loaded </div>
+        Page v.029 <div id="versionlabel"> Script not loaded </div>
       </div>
       <div style="float:left; position:static; height:24; padding:3px; text-align: center;">
         Seed<br>
@@ -20,10 +20,10 @@
         <p>Hulls Pane.</p>
       </div>
     </div>
-    <div id="settingspane" style="height: 100%; width: 25%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; padding-top: 20px; padding-bottom: 20px; padding-right: 20px; right: 50%; border:1px; border-color:#FFFFFF;">
+    <div id="settingspane" style="height:100%; width:25%; position:fixed; z-index:1; top:0; padding:10px; right:50%;">
       Settings Pane.
     </div>
-    <div style="height:100%; width:50%; position:fixed; z-index:1; top:0; right:0; padding:10px;">
+    <div style="height:100%; width:50%; position:fixed; z-index:1; top:0; right:0; padding-left:10px; padding-bottom:20px; padding-top:10px;">
       <div id="viewport" style="background-color:#000000; position:absolute; height:100vh; width:100vh">
         Output Pane.
       </div>
