--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <div style="height: 100%; width: 25%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
       <h1>Ship Generator</h1>
       <div style="float:left; position:static; height:24; padding:3px;">
-        Page v.032 <div id="versionlabel"> Script not loaded </div>
+        Page v.033 <div id="versionlabel"> Script not loaded </div>
       </div>
       <div style="float:left; position:static; height:24; padding:3px; text-align: center;">
         Seed<br>
@@ -24,7 +24,7 @@
       Settings Pane.
     </div>
     <div style="height:100%; width:50%; position:fixed; z-index:1; top:0; right:0; padding-left:10px; padding-bottom:10px; padding-top:10px;">
-      <div id="viewport" style="background-color:#000000; position:absolute; top:10px; bottom:10px; right:10px; left:50%;">
+      <div id="viewport" style="background-color:#000000; position:absolute; top:10px; bottom:10px; right:10px; left:10px;">
         Output Pane.
       </div>
     </div>
