--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <div style="height: 100%; width: 25%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
       <h1>Ship Generator</h1>
       <div style="float:left; position:static; height:24; padding:3px;">
-        Page v.033 <div id="versionlabel"> Script not loaded </div>
+        Page v.034 <div id="versionlabel"> Script not loaded </div>
       </div>
       <div style="float:left; position:static; height:24; padding:3px; text-align: center;">
         Seed<br>
@@ -20,10 +20,10 @@
         <p>Hulls Pane.</p>
       </div>
     </div>
-    <div id="settingspane" style="height:100%; width:25%; position:fixed; z-index:1; top:0; padding:10px; right:50%;">
+    <div id="settingspane" style="height:100%; width:25%; position:fixed; z-index:1; top:0px; padding:10px; right:50%;">
       Settings Pane.
     </div>
-    <div style="height:100%; width:50%; position:fixed; z-index:1; top:0; right:0; padding-left:10px; padding-bottom:10px; padding-top:10px;">
+    <div style="width:50%; position:fixed; z-index:1; top:0px; right:0px; bottom:0px;">
       <div id="viewport" style="background-color:#000000; position:absolute; top:10px; bottom:10px; right:10px; left:10px;">
         Output Pane.
       </div>
