--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <canvas id="renderCanvas" touch-action=none style="position:absolute; top:10px; left:10px;"></canvas>
     </div>
     
-    
+    <script src="https://unpkg.com/earcut@2.1.1/dist/earcut.min.js"></script>
     <script src="https://preview.babylonjs.com/babylon.js"></script>
     <script src="https://preview.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
     <script src="https://code.jquery.com/pep/0.4.3/pep.js"></script>
