--- a/index.html
+++ b/index.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <html>
   <body style="background-color:#1b1b20; color:#909090;">
-    <div style="height: 100%; width: 25%; position: fixed; z-index: 1; top: 0; overflow-x: hidden; left: 0; padding-left:10px">
-      <h1>Ship Generator</h1>
-      <div style="float:left; position:static; height:24; padding:3px;">
-        Page v.040 <div id="versionlabel"> Script not loaded </div>
+    <div style="height: 100%; width: 50%; position: fixed; z-index: 1; top: 0; left: 0; padding-left:10px id=leftpane">
+      <div style="float:left; position:static; padding:3px;">
+        <h1>Ship Generator</h1>
+        <div style="float:left; position:static; height:24; padding:3px;">
+          Page v.041 <div id="versionlabel"> Script not loaded </div>
+        </div>
+        <div style="float:left; position:static; height:24; padding:3px; text-align: center;">
+          Seed<br>
+          <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="seed" min="0" max="255" step="1" value="0">
+        </div>
+        <div style="float:left; position:static; height:24; padding:3px;">
+          <button id="updatemodel">
+          Update Model
+          </button><br>
+          <input type="checkbox" id="slowmode">
+          <label for="slowmode" title="Draw slowly to show generation methods.">Slow Mode</label>
+        </div>
+        <div id="hullspane" style="clear:left">
+          <ul style="list-style-type:none;" id="hullspane">
+          </ul>
+        </div>
       </div>
-      <div style="float:left; position:static; height:24; padding:3px; text-align: center;">
-        Seed<br>
-        <input style="width:20; background-color:#202020; border-color:#101010; color:#909090;" type="number" id="seed" min="0" max="255" step="1" value="0">
-      </div>
-      <div style="float:left; position:static; height:24; padding:3px;">
-        <button id="updatemodel">
-        Update Model
-        </button><br>
-        <input type="checkbox" id="slowmode">
-        <label for="slowmode" title="Draw slowly to show generation methods.">Slow Mode</label>
-      </div>
-      <div id="hullspane" style="clear:left">
-        <ul style="list-style-type:none;" id="hullspane">
-        </ul>
-      </div>
-    </div>
-    <div id="settingspane" style="height:100%; width:25%; position:fixed; z-index:1; top:0px; padding:10px; right:50%;">
-      Settings Pane.
     </div>
     <div style="width:50%; position:fixed; z-index:1; top:0px; right:0px; bottom:0px;">
       <canvas id="renderCanvas" touch-action=none style="position:absolute; top:10px; left:10px;"></canvas>
