--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <input type="checkbox" id="slowmode">
           <label for="slowmode" title="Draw slowly to show generation methods.">Slow Mode</label>
         </div>
-        <div id="hullspane" style="clear:left">
+        <div id="countpane" style="clear:left">
         </div>
       </div>
     </div>
