--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body style="background-color:#1b1b20; color:#909090;">
-    <div style="height: 100%; width: 50%; position: fixed; z-index: 1; top: 0; left: 0; padding-left:10px id="leftpane">
+    <div style="height: 100%; width: 50%; position: fixed; z-index: 1; top: 0; left: 0; padding-left:10px" id="leftpane">
       <div style="float:left; position:static; padding:3px;">
         <h1>Ship Generator</h1>
         <div style="float:left; position:static; height:24; padding:3px;">
