--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <body style="background-color:#1b1b20; color:#909090;">
-    <div style="height: 100%; width: 50%; position: fixed; z-index: 1; top: 0; left: 0; padding-left:10px" id="leftpane">
-      <div style="float:left; position:static; padding:3px; overflow:scroll;">
+    <div style="height: 100%; width: 50%; position: fixed; z-index: 1; top: 0; left: 0; padding-left:10px; overflow-y:auto;" id="leftpane">
+      <div style="float:left; position:static; padding:3px;">
         <h1>Ship Generator</h1>
         <div style="float:left; position:static; height:24; padding:3px;">
-          Page v.042 <div id="versionlabel"> Script not loaded </div>
+          Page v.043 <div id="versionlabel"> Script not loaded </div>
         </div>
         <div style="float:left; position:static; height:24; padding:3px; text-align: center;">
           Seed<br>
